<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_icon"
        android:layout_margin="5dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="11dp"
        app:cardCornerRadius="30dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.8">

        <ImageView

            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/tuwaiq"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuwaiq_academy"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@+id/user_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/acount_name"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:text="@string/tuwaiq_academy_user_name"
        app:layout_constraintTop_toBottomOf="@+id/acount_name"
        app:layout_constraintStart_toStartOf="@+id/acount_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_text"
        android:id="@+id/content_textview"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_icon"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hash"
        android:textColor="@color/prim_twitter_light"
        android:text="@string/hash"
        app:layout_constraintStart_toEndOf="@+id/content_textview"
        app:layout_constraintTop_toTopOf="@+id/content_textview"
        app:layout_constraintBottom_toBottomOf="@+id/content_textview"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_text2"
        android:id="@+id/content_textview2"
        app:layout_constraintTop_toBottomOf="@+id/content_textview"
        app:layout_constraintStart_toStartOf="@+id/content_textview"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/link"
        android:text="@string/star_codes_link"
        android:textSize="10dp"
        android:textColor="@color/prim_twitter_light"
        app:layout_constraintTop_toBottomOf="@+id/content_textview2"
        app:layout_constraintStart_toStartOf="@+id/content_textview2"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/media_card"
        app:layout_constraintTop_toBottomOf="@+id/link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white_dark">
    <ImageView
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:src="@drawable/imgtuwaiq"
        android:id="@+id/content_img"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/masg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_textsms_24"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="16dp"/>
    <ImageView
        android:id="@+id/retweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/masg"
        app:layout_constraintTop_toTopOf="@+id/masg"
        app:layout_constraintBottom_toBottomOf="@+id/masg"
        android:src="@drawable/ic_baseline_autorenew_24"
        android:layout_marginStart="60dp"
        />
    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toEndOf="@+id/retweet"
        app:layout_constraintTop_toTopOf="@+id/retweet"
        app:layout_constraintBottom_toBottomOf="@+id/retweet"
        android:src="@drawable/ic_baseline_thumb_up_24"/>
    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        android:src="@drawable/ic_baseline_share_24"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/line_separate2"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/masg"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/retweets_like_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/date_info_text"
        app:layout_constraintBottom_toTopOf="@+id/line_separate2"
        android:text="@string/retweets_likes" />
    <TextView
        android:id="@+id/date_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/content_textview"
        app:layout_constraintBottom_toTopOf="@+id/line_separate"
        android:layout_marginTop="15dp"
        android:text="@string/date_time" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tweet_web_app"
        android:text="@string/twitter_web_app"
        android:textColor="@color/prim_twitter_light"
        app:layout_constraintStart_toEndOf="@id/date_info_text"
        app:layout_constraintTop_toTopOf="@+id/date_info_text"
        app:layout_constraintBottom_toBottomOf="@+id/date_info_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="14sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/line_separate"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/date_info_text"
        app:layout_constraintBottom_toTopOf="@+id/retweets_like_text"
        android:layout_margin="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>